[tool.poetry]
name = "tap-geoip"
version = "0.0.1"
description = "`tap-geoip` is a Singer tap for GeoIP, built with the Meltano SDK for Singer Taps."
authors = ["Pablo Seibelt"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.31.0"
singer-sdk = "^0.31.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-geoip = 'tap_geoip.tap:TapGeoIP.cli'
